Add first attempt to access api sistemas

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -28,7 +28,7 @@
                     <div class="carousel-caption-content">
                         <h1>Programa de Pós-Graduação em<br/><strong>{{ program.name }}</strong>.</h1>
                         <p>
-                            Stricto sensu: o Mestrado Profissional em Gestão Pública prepara dirigentes para atuar em instituições governamentais.
+                            Stricto sensu: o Mestrado Profissional em Gestão Pública prepara dirigentes para atuar em instituições governamentais. E o token é: {{ token_test_type }}
                         </p>
                         <p><a class="btn btn-lg btn-primary" href="{{ url_for('page_not_found') }}" role="button">Quem são os egressos? &raquo;</a></p>
                     </div>
