Init auth algorithm (todo: need a remote server inside UFRN to work)

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -85,7 +85,7 @@
                             {% endfor %}
                         </ul>
                     </li>
-                    <li><a href="{{ url_for('page_not_found') }}"> Acesso Privado </a></li>
+                    <li><a href="{{ url_for('login') }}"> Acesso Privado </a></li>
                 </ul>
 
             </div>
