--- a/MinervaEnv/Minerva/static/css/general.css
+++ b/MinervaEnv/Minerva/static/css/general.css
@@ -13,12 +13,9 @@ body {
     padding-bottom: 20px;
 }
 
-section span{
-    font-weight: bold;
-}
-
 section header h2{
     padding-left: 5px;
+    font-weight: normal;
 }
 
 
