--- a/MinervaEnv/Minerva/static/css/ppgp.css
+++ b/MinervaEnv/Minerva/static/css/ppgp.css
@@ -1,24 +1,11 @@
-/* (re)color some stuff due to academic field */
+/* (re)color some stuff due to program specificatinos */
 
 section header h2{
     padding-left: 5px;
-    color: #000;
     border-bottom: 2px solid #99b333;
-    /*background-color: #99b333;
-    color: #FFF;*/
 }
 
 h4,
 section span{
     color: #063E5F;
 }
-/*
-.carousel-caption .carousel-caption-content{
-    background-color: rgba(254, 214, 146, 0.7);
-}
-*/
-/*
-body{
-    background-color: #fed591;
-}
-*/
