Add icons everywhere!

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -78,7 +78,7 @@
 
     <section class="col-md-4">
         <header>
-            <h2>Atendimento</h2>
+            <h2><span class="glyphicon glyphicon-map-marker"></span> Atendimento</h2>
         </header>
         <img src="static/assets/logo_ppgp.png" alt="Gestão Pública" class="program-logo center-block" width="200">
         <p>
@@ -101,7 +101,7 @@
     
     <section class="col-md-4">
         <header>
-            <h2>Trabalhos de Conclusão</h2>
+            <h2><span class="glyphicon glyphicon-pushpin"></span> Apresentações</h2>
         </header>
             <p>Apresentações públicas dos discentes diante de suas bancas examinadoras.</p>
             <table class="schedule-table">
@@ -172,7 +172,7 @@
     
     <section class="col-md-4">
         <header>
-            <h2>Processos Seletivos</h2>
+            <h2><span class="glyphicon glyphicon-bullhorn"></span> Seleções</h2>
         </header>
         <h4>Mestrado (15 vagas):
             <br/>
