--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="carousel-caption">
                     <div class="carousel-caption-content">
-                        <h1>Programa de Pós-Graduação em<br/><strong>{{ program.name }}</strong>.</h1>
+                        <h1>Programa de Pós-Graduação em<br/><strong>{{ post_graduation.name }}</strong>.</h1>
                         <p>
                             Stricto sensu: o Mestrado Profissional em Gestão Pública prepara dirigentes para atuar em instituições governamentais.
                         </p>
@@ -82,11 +82,12 @@
         </header>
         <img src="static/assets/logo_ppgp.png" alt="Gestão Pública" class="program-logo center-block" width="200">
         <p>
-            <span>Sala:</span> Administração do CCSA, Térreo, Ala A, Sala 10.<br/>
-            <span>Horários: </span> Segunda à Sexta-Feira (08:00 às 11:30 e 13:30 às 17:00).<br/>
-            <span>E-mail:</span> <a href="mailto:ppgp.ufrn@gmail.com">ppgp.ufrn@gmail.com</a><br/>
-            <span>Telefone 1:</span> +55 84 3342-2288 (Ramal 182)<br/>
-            <span>Telefone 2:</span> +55 84 9 9474-6765<br/>
+            <span>Sala:</span> {{ post_graduation.attendance.building }}, {{ post_graduation.attendance.floor }}, {{ post_graduation.attendance.room }}.<br/>
+            <span>Horários: </span> {{ post_graduation.attendance.opening }}<br/>
+            <span>E-mail:</span> <a href="mailto:{{ post_graduation.email }}">{{ post_graduation.email }}</a><br/>
+            {% for phone in post_graduation.phones %}
+            <span>Telefone {{ phone.type }}:</span> {{ phone.number }}<br/>
+            {% endfor %}
         </p>
         <div id="map"><!-- Google Maps API. --></div>
         <p>
