--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -106,68 +106,29 @@
         </header>
             <p>Apresentações públicas dos discentes diante de suas bancas examinadoras.</p>
             <table class="schedule-table">
+                {% for report in final_reports %}
                 <tr class="schedule-container">
                     <td class="schedule-container-date">
                         <ul>
-                            <li class="schedule-date-day">17</li>
-                            <li class="schedule-date-month">FEV</li>
-                            <li class="schedule-date-year">2017</li>
+                            <li class="schedule-date-day">{{ report.time.strftime("%d") }}</li>
+                            <li class="schedule-date-month">{{ report.time.strftime("%b").upper() }}</li>
+                            <li class="schedule-date-year">{{ report.time.strftime("%Y") }}</li>
                         </ul>
                     </td>
                     <td class="schedule-container-info">
-                        <h4>A percepção de alunos com deficiência sobre a gestão para a inclusão: o caso IFPB - Campus João Pessoa
+                        <h4>{{ report.title }}
                             <br/>
-                            <small>Giorginone Mendes Ribeiro Júnior</small>
+                            <small>{{ report.author }}</small>
                         </h4>
                         <p>
-                            Local: Setor V, Sala D4<br/>
-                            Horário: 14:00<br/>
+                            Local: {{ report.location }}<br/>
+                            Horário: {{ report.time.strftime("%H:%M") }}<br/>
                         </p>
                     </td>
                 </tr>
-                <!-- TO REMOVE -->
-                <tr class="schedule-container">
-                    <td class="schedule-container-date">
-                        <ul>
-                            <li class="schedule-date-day">17</li>
-                            <li class="schedule-date-month">FEV</li>
-                            <li class="schedule-date-year">2017</li>
-                        </ul>
-                    </td>
-                    <td class="schedule-container-info">
-                        <h4>Transparência pública: análise sobre as práticas dos Institutos Federais de Educação, Ciência e Tecnologia
-                            <br/>
-                            <small>Luzivan Jose da Silva</small>
-                        </h4>
-                        <p>
-                            Local: Setor V, Sala D4<br/>
-                            Horário: 09:00<br/>
-                        </p>
-                    </td>
-                </tr>
-
-                <tr class="schedule-container">
-                    <td class="schedule-container-date">
-                        <ul>
-                            <li class="schedule-date-day">10</li>
-                            <li class="schedule-date-month">FEV</li>
-                            <li class="schedule-date-year">2017</li>
-                        </ul>
-                    </td>
-                    <td class="schedule-container-info">
-                        <h4>A institucionalização da sustentabilidade no Instituto Federal de Educação, Ciência e Tecnologia da Paraíba: o caso João Pessoa
-                            <br/>
-                            <small>Leonardo Freire de Mendonça Soares</small>
-                        </h4>
-                        <p>
-                            Local: Setor V, Sala D4<br/>
-                            Horário: 14:00<br/>
-                        </p>
-                    </td>
-                </tr>
-                <!-- / -->
+                {% endfor %}
             </table>
-            <p><a class="btn btn-default center-block" href="{{ url_for('page_not_found') }}">Ver cronograma inteiro &raquo;</a></p>
+            <!--<p><a class="btn btn-default center-block" href="{{ url_for('page_not_found') }}">Ver cronograma inteiro &raquo;</a></p>-->
         </header>
     </section>
     
