#5 Start preparing for prerelease

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -52,7 +52,7 @@
                             </li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-list-alt"></span> Discentes</a>
+                                <span class="glyphicon glyphicon-list-alt"></span> Discentes (em breve)</a>
                             </li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
@@ -63,18 +63,18 @@
                             <li class="dropdown-header">Pesquisa</li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-search"></span> Projetos</a>
+                                <span class="glyphicon glyphicon-search"></span> Projetos (em breve)</a>
                             </li>
                             
                             <li role="separator" class="divider"></li>
                             <li class="dropdown-header">Extensão</li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-globe"></span> Eventos</a>
+                                <span class="glyphicon glyphicon-globe"></span> Eventos e Convênios</a>
                             </li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-briefcase"></span> Egressos</a>
+                                <span class="glyphicon glyphicon-briefcase"></span> Egressos (em breve)</a>
                             </li>
                         </ul>
                     </li>
@@ -87,15 +87,11 @@
                             </li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-file"></span> Documentos</a>
+                                <span class="glyphicon glyphicon-file"></span> Documentos (em breve)</a>
                             </li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-gift"></span> Convênios</a>
-                            </li>
-                            
-                            <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-calendar"></span> Calendário</a>
+                                <span class="glyphicon glyphicon-calendar"></span> Calendário (em breve)</a>
                             </li>
                         </ul>
                     </li>
@@ -129,7 +125,9 @@
                             {% endfor %}
                         </ul>
                     </li>
+                    <!--
                     <li><a href="{{ url_for('login') }}"><span class="glyphicon glyphicon-log-in"></span> Entrar </a></li>
+                    -->
                 </ul>
 
             </div>
@@ -146,8 +144,9 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2017 - Minerva Project (Centro de Ciências Sociais Aplicadas, Universidade Federal do Rio Grande do Norte)</p>
-            <p><a href="https://github.com/Mazuh/Minerva" target="_blank">Free source</a>, licensed by GPL3</p>
+            <p class="pull-right">v0.0.2 (Pré-Lançamento)</p>
+            <p>&copy; 2017 - Projeto Minerva (Centro de Ciências Sociais Aplicadas, Universidade Federal do Rio Grande do Norte)</p>
+            <p><a href="https://github.com/Mazuh/Minerva" target="_blank">Código livre</a>, licenciado em GPL3.</p>
         </div>
     </footer>
 
