Fix bugs due to bad relative paths

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -21,7 +21,7 @@
     <div class="carousel-inner" role="listbox">
         
         <div class="item active">
-            <img class="first-slide" src="static/assets/office_lady_using_laptop_holding_smartphone_and_coffe.jpg" 
+            <img class="first-slide" src="/static/assets/office_lady_using_laptop_holding_smartphone_and_coffe.jpg" 
             alt="Primeiro quadro: mulher no escritório usando laptop e segurando um smartphone e um café na mão.">
             <div class="container">
                 <div class="carousel-caption">
@@ -80,7 +80,7 @@
         <header>
             <h2><span class="glyphicon glyphicon-map-marker"></span> Atendimento</h2>
         </header>
-        <img src="static/assets/logo_ppgp.png" alt="Gestão Pública" class="program-logo center-block" width="200">
+        <img src="/static/assets/logo_ppgp.png" alt="Gestão Pública" class="program-logo center-block" width="200">
         <p>
             <span>Sala:</span> {{ post_graduation.attendance.building }}, {{ post_graduation.attendance.floor }}, {{ post_graduation.attendance.room }}.<br/>
             <span>Horários: </span> {{ post_graduation.attendance.opening }}<br/>
