--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -126,7 +126,7 @@
                         </ul>
                     </li>
                     <!--
-                    <li><a href="{{ url_for('login') }}"><span class="glyphicon glyphicon-log-in"></span> Entrar </a></li>
+                    <li><a href="waddawadda"><span class="glyphicon glyphicon-log-in"></span> Entrar </a></li>
                     -->
                 </ul>
 
