--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -47,7 +47,7 @@
                             <li role="separator" class="divider"></li>
                             <li class="dropdown-header">Ensino</li>
                             
-                            <li><a href="{{ url_for('page_not_found') }}">
+                            <li><a href="{{ url_for('view_subjects', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-blackboard"></span> Disciplinas</a>
                             </li>
                             
