Move some css to general style

--- a/MinervaEnv/Minerva/templates/subjects_view.html
+++ b/MinervaEnv/Minerva/templates/subjects_view.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="page-header">
+<div class="main-page-header">
     <h1 class="text-center"><small>Pós-Graduação em</small><br/> {{ std.post_graduation.name }}</h1>
 </div>
 
