--- a/MinervaEnv/Minerva/static/css/general.css
+++ b/MinervaEnv/Minerva/static/css/general.css
@@ -13,9 +13,20 @@ body {
     padding-bottom: 20px;
 }
 
+/* for reading pages outside home */
+
 section header h2{
     padding-left: 5px;
     font-weight: normal;
+}
+
+.page-header h1,
+.page-header h2{
+    margin-bottom: 5px;
+}
+
+.main-page-header{
+    margin-bottom: 5px;
 }
 
 
