Implements professors view

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -55,7 +55,7 @@
                                 <span class="glyphicon glyphicon-list-alt"></span> Discentes (em breve)</a>
                             </li>
                             
-                            <li><a href="{{ url_for('page_not_found') }}">
+                            <li><a href="{{ url_for('view_professors', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-apple"></span> Docentes</a>
                             </li>
                             
