Implement integrations view

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -69,7 +69,7 @@
                             <li role="separator" class="divider"></li>
                             <li class="dropdown-header">Extensão</li>
                             
-                            <li><a href="{{ url_for('page_not_found') }}">
+                            <li><a href="{{ url_for('view_integrations', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-globe"></span> Eventos e Convênios</a>
                             </li>
                             
