Add staffs page

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -82,7 +82,7 @@
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-leaf"></span> Coordenação <span class="caret"></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('page_not_found') }}">
+                            <li><a href="{{ url_for('view_staffs', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-knight"></span> Equipe</a>
                             </li>
                             
