--- a/MinervaEnv/Minerva/templates/staffs_view.html
+++ b/MinervaEnv/Minerva/templates/staffs_view.html
@@ -33,10 +33,9 @@
     <h3>Secretaria</h3>
 
     <p>
-        Normalmente, antes de ir direto à coordenação, a secretaria do Programa será capaz
-        de resolver antecipadamente algumas questões. O setor funciona no horário regular de
+        O setor funciona no horário regular de
         <a href="{{ url_for('home', initials=std.post_graduation.initials) }}">atendimento</a>,
-        logo estando melhor disponível auxiliar para professores e discentes.
+        logo estando melhor disponível para auxiliar para professores e discentes.
         Abaixo, os membros que a compõem.
     </p>
 
